# seL4-proof-search

./: .gitignore  LICENSE  README.md
Isa-Repl/: .gitignore  API_Documentation.md  README.md  build.sbt  run.sh
Isa-Repl/python-test/: Test.thy  Test_Afp.thy  Test_Dep.thy  test_check_subgoals.py  test_dependent_thm_with_thy.py  test_dependent_thms.py  test_extract_goals.py  test_extract_parent_thms.py  test_find_theorems.py  test_hammer_facts.py  test_quickcheck.py  (+5 more)
seL4-prover/: .env.template  .gitignore  README.md  config.py  main.py  pyproject.toml  run.sh  server_start.sh
seL4-prover/.github/workflows/: ruff.yml
seL4-prover/data/: FVELv2Data.py  lemma.py  lib.py  session.py  theory.py
seL4-prover/datasets/: code2inv_divide.py  medium_test.json  small_test.json  tactic_list.txt  tactic_simplified.txt  tiny_test.json
seL4-prover/eval/: base_evaluator.py  base_evaluatorV2.py  config.py  fvel_eval.py  groundtruth_prover.py  lib.py  logger.py  tree_search_eval.py  tree_searcher.py
seL4-prover/eval_v2/: base_evaluatorV2.py  eval.py  lib.py
seL4-prover/provers/: fullstep_prover_api.py  groundtruth_prover.py  lib.py  logger.py  treesearch_prover.py
seL4-prover/pytest/: test_base_evaluatorV2.py  test_treesearch_evalV2.py
seL4-prover/pytest/assets/: lemma_splits_sample.json
seL4-prover/results/: proofs_merged.json
seL4-prover/scripts/: README.md  code2inv.py  code2inv_divide.py
seL4-prover/test/: test_llm.py  test_repl.py
seL4-prover/utils/: build_proof_steps.py  error_utils.py  isar_utils.py  lib.py  parser.py  repl.py  repl_utils.py  retrofitFVEL.py
(+22 files in other folders)
