[project]
name = "sel4-prover"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "dotenv",
    "openai",
    "pandas",
    "psutil",
    "py4j",
    "pydantic",
    "pygments",
    "requests",
    "rustworkx",
    "tqdm",
    "ray",
    "treelib",
    "shutil",
    "levenshtein"
]

# [build-system]
# requires = ["hatchling"]
# build-backend = "hatchling.build"

# [tool.setuptools.packages.find]
# where = ["."]
