[project]
name = "sel4-prover"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "dotenv",
    "openai",
    "pandas",
    "psutil",
    "py4j",
    "pydantic",
    "pygments",
    "requests",
    "rustworkx",
    "tqdm",
    "ray",
    "treelib",
    "levenshtein"
]

[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["data*", "eval*", "eval_v2*", "provers*", "utils*"]

[tool.setuptools]
py-modules = ["config", "main"]
